--- a/index.html
+++ b/index.html
@@ -33,7 +33,12 @@
         </div>
       </div>
 
-      <div id="slider"></div>
+      <div id="slider">
+        <div class="text-content">
+          <h2 class="text-heading">Chicago</h2>
+          <div class="text-desciption">Thank you, Chicago - A night we won't forget.</div>
+        </div>
+      </div>
 
       <div id="content"></div>
 
