--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
             </ul>
           </li>
         </ul>
-        <div class="search-btn">
-          <i class="search-icon ti-search"></i>
-        </div>
         <div id="mobile-menu" class="mobile-menu-btn">
           <i class="menu-icon ti-menu"></i>
+        </div>
+        <div class="search-btn">
+          <i class="search-icon ti-search"></i>
         </div>
       </div>
 
@@ -272,8 +272,15 @@
       var menuItems = document.querySelectorAll('#nav li a[href*="#"]');
       for (var i = 0; i < menuItems.length; i++) {
         var menuItem = menuItems[i];
-        menuItem.onclick = function () {
-          header.style.height = "46px";
+        menuItem.onclick = function (event) {
+          var isParentMenu =
+            this.nextElementSibling &&
+            this.nextElementSibling.classList.contains("subnav");
+          if (isParentMenu) {
+            event.preventDefault();
+          } else {
+            header.style.height = null;
+          }
         };
       }
     </script>
