--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             ea commodo consequat.
           </p>
           <div class="row members-list">
-            <div class="col col-third text-center">
+            <div class="member-item col col-third s-col-full mt-32 text-center">
               <p class="member-name">Name</p>
               <img
                 src="/assets/img/band/member.jpg"
@@ -72,7 +72,7 @@
                 class="member-img"
               />
             </div>
-            <div class="col col-third text-center">
+            <div class="member-item col col-third s-col-full mt-32 text-center">
               <p class="member-name">Name</p>
               <img
                 src="/assets/img/band/member.jpg"
@@ -80,7 +80,7 @@
                 class="member-img"
               />
             </div>
-            <div class="col col-third text-center">
+            <div class="member-item col col-third s-col-full mt-32 text-center">
               <p class="member-name">Name</p>
               <img
                 src="/assets/img/band/member.jpg"
@@ -102,7 +102,7 @@
               <li>Noverber <span class="quantity">3</span></li>
             </ul>
             <div class="row places-list">
-              <div class="col col-third">
+              <div class="col col-third s-col-full mt-16">
                 <img
                   src="/assets/img/places/place1.jpg"
                   alt="New York"
@@ -114,10 +114,12 @@
                   <p class="place-desc">
                     Praesent tincidunt sed tellus ut rutrum sed vitae justo.
                   </p>
-                  <button class="btn js-buy-ticket">Buy Tickets</button>
+                  <button class="btn js-buy-ticket s-full-width">
+                    Buy Tickets
+                  </button>
                 </div>
               </div>
-              <div class="col col-third">
+              <div class="col col-third s-col-full mt-16">
                 <img
                   src="/assets/img/places/place2.jpg"
                   alt="New York"
@@ -129,10 +131,12 @@
                   <p class="place-desc">
                     Praesent tincidunt sed tellus ut rutrum sed vitae justo.
                   </p>
-                  <button class="btn js-buy-ticket">Buy Tickets</button>
+                  <button class="btn js-buy-ticket s-full-width">
+                    Buy Tickets
+                  </button>
                 </div>
               </div>
-              <div class="col col-third">
+              <div class="col col-third s-col-full mt-16">
                 <img
                   src="/assets/img/places/place3.jpg"
                   alt="New York"
@@ -144,7 +148,9 @@
                   <p class="place-desc">
                     Praesent tincidunt sed tellus ut rutrum sed vitae justo.
                   </p>
-                  <button class="btn js-buy-ticket">Buy Tickets</button>
+                  <button class="btn js-buy-ticket s-full-width">
+                    Buy Tickets
+                  </button>
                 </div>
               </div>
             </div>
@@ -154,15 +160,21 @@
           <h2 class="section-heading">CONTACT</h2>
           <p class="section-sub-heading">Fan? Drop a note!</p>
           <div class="row contact-content">
-            <div class="col col-half contact-info">
+            <div class="col col-half s-col-full contact-info">
               <p><i class="ti-location-pin"></i> Chicago, US</p>
-              <p><i class="ti-mobile"></i> Phone: +00 151515</p>
-              <p><i class="ti-email"></i> Email: mail@mail.com</p>
+              <p>
+                <i class="ti-mobile"></i> Phone:
+                <a href="tel:+00 151515">+00 151515</a>
+              </p>
+              <p>
+                <i class="ti-email"></i> Email:
+                <a href="mailto:mail@mail.com">mail@mail.com</a>
+              </p>
             </div>
-            <div class="col col-half contact-form">
+            <div class="col col-half s-col-full contact-form">
               <form action="">
                 <div class="row">
-                  <div class="col col-half">
+                  <div class="col col-half s-col-full">
                     <input
                       type="text"
                       class="form-control"
@@ -170,7 +182,7 @@
                       required
                     />
                   </div>
-                  <div class="col col-half">
+                  <div class="col col-half s-col-full s-mt-8">
                     <input
                       type="email"
                       class="form-control"
@@ -190,7 +202,7 @@
                   </div>
                 </div>
                 <input
-                  class="btn mt-16 pull-right"
+                  class="contact-submit-btn btn mt-16 pull-right s-full-width"
                   type="submit"
                   value="SEND"
                 />
